--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
+    "@glimpse/glimpse": "^0.20.8",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
